--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <button id="history-button" class="btn">History</button>
         </div>
 
-        <section class=" px-10 lg:px-36 py-10">
+        <!-- donation Section -->
+        <section id="donationSection" class=" px-10 lg:px-36 py-10">
             <!-- 1 no card -->
             <div class="flex flex-col lg:flex-row border-2 p-10 rounded-xl mb-10">
                 <!-- image part -->
