--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
             <div class="navbar p-6 bg-yellow-50">
                 <div class="navbar-start">
                   
-                  <a class="btn  bg-lime-500 text-xl">Blog</a>
+                    <button id="home-btn" class="btn  bg-lime-500 text-lg px-6">Home</button>
                 </div>
                 <div class="navbar-center lg:flex">
                     <img src="assets/logo.png" alt="">
@@ -73,6 +73,7 @@
                 </div>
           </div>
     </main>
+    <script src="js/blog.js"></script>
     
 </body>
 </html>
