--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <header class="sticky top-0 z-50 m-0"></header>
+    <header class="sticky top-0 z-50 m-0">
         <!-- Nav bar section -->
         <nav>
             <div class="navbar p-6 bg-yellow-50">
@@ -73,6 +73,10 @@
                 </div>
           </div>
     </main>
+
+    <script src="js/utililities.js"></script>
+      <script src="js/add-donation.js"></script>
+      <script src="js/history.js"></script>
     <script src="js/blog.js"></script>
     
 </body>
