--- a/blog.html
+++ b/blog.html
@@ -24,12 +24,12 @@
                     <button id="home-btn" class="btn  bg-lime-500 text-lg px-6">Home</button>
                 </div>
                 <div class="navbar-center lg:flex">
-                    <img src="assets/logo.png" alt="">
-                  <h1>Donate Bangladesh</h1>
+                    <img class="w-8 mr-3" src="assets/logo.png" alt="">
+                  <h1 class="text-xl font-bold">Donate Bangladesh</h1>
                 </div>
                 <div class="navbar-end">
-                  <img src="assets/coin.png" alt="">
-                  <h1><span id="available-amount">5500 </span>BDT</h1>
+                  <img class="mr-2" src="assets/coin.png" alt="">
+                  <h1 class="font-bold"><span id="available-amount">5500 </span>BDT</h1>
                 </div>
               </div>
 
