--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                   <button id="blog-btn" class="btn  bg-lime-500 text-lg px-6">Blog</button>
                 </div>
                 <div class="navbar-center lg:flex">
-                    <img src="assets/logo.png" alt="">
-                  <h1>Donate Bangladesh</h1>
+                    <img class="w-8 mr-3" src="assets/logo.png" alt="">
+                  <h1 class="text-xl font-bold">Donate Bangladesh</h1>
                 </div>
                 <div class="navbar-end">
-                  <img src="assets/coin.png" alt="">
-                  <h1><span id="available-amount">5500 </span>BDT</h1>
+                  <img class="mr-2" src="assets/coin.png" alt="">
+                  <h1 class="font-bold"><span id="available-amount">5500 </span>BDT</h1>
                 </div>
               </div>
 
@@ -57,7 +57,7 @@
                   <div class="lg:w-1/2 mt-5">
                     <div class="bg-slate-100 flex w-32 p-3 mb-4 rounded-lg gap-2"> 
                         <img src="assets/coin.png" alt="">
-                         <h1><span id="donation-amount-1">0 </span>BDT</h1>
+                         <h1><span id="donation-amount-1">0 </span> BDT</h1>
                     </div>
 
                     <div>
@@ -143,6 +143,7 @@
 
             </div>
         </section>
+
         <!-- Modal Structure -->
         <div id="donationModal" class="hidden fixed inset-0 bg-gray-800 bg-opacity-50 flex justify-center items-center">
             <div class="bg-white p-6 rounded-lg shadow-lg w-96">
@@ -163,11 +164,11 @@
 
         <!-- History section -->
              
-       <section id="historySection" class="hidden bg-white p-6 rounded-lg shadow-md mt-8">
+        <section id="historySection" class="hidden bg-white p-6 rounded-lg shadow-md mt-8">
          <ul id="historyList" class="list-disc pl-5 space-y-2">
             <!-- Donation history will appear here -->
          </ul>
-      </section>
+        </section>
 
 
        
