Another bug is solved

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
             <div class="navbar p-6 bg-yellow-50">
                 <div class="navbar-start">
                   
-                    <button id="home-btn" class="btn  bg-lime-500 text-lg px-6">Home</button>
+                    <a href="index.html"><button id="home-btn" class="btn  bg-lime-500 text-lg px-6">Home</button></a>
                 </div>
                 <div class="navbar-center lg:flex">
                     <img class="w-8 mr-3" src="assets/logo.png" alt="">
