--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="navbar p-6 bg-yellow-50">
                 <div class="navbar-start">
                   
-                  <a href="blog.html"><button id="blog-btn" class="btn  bg-lime-500 text-lg px-6">Blog</button></a>
+                  <a href="./blog.html"><button id="blog-btn" class="btn  bg-lime-500 text-lg px-6">Blog</button></a>
                 </div>
                 <div class="navbar-center lg:flex">
                     <img class="w-8 mr-3" src="assets/logo.png" alt="">
